gac_sb/objects/AppATrecours__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>ARRecoursRecu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Recours reçu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commentaire_consequence__c</fullName>
        <label>Commentaire conséquence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consequence__c</fullName>
        <label>Conséquence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appel GAC</fullName>
                </value>
                <value>
                    <fullName>Appel partie adverse</fullName>
                </value>
                <value>
                    <fullName>Pas d&apos;appel / Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateAudiencePassagePresumee__c</fullName>
        <formula>IF(ISBLANK(DateDepotRecours__c),
   DateEnvoieModeleClient__c+ROUND(DelaiPassage__c*(365.25/12),
                                   0),
   DateDepotRecours__c+ROUND(DelaiPassage__c*(365.25/12),
                             0)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date audience / Passage Présumée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateAudiencePassageReelle__c</fullName>
        <label>Date d’audience/passage réelle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateDelibere__c</fullName>
        <label>Date du Délibéré</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateDepotRecours__c</fullName>
        <label>Date dépôt recours</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateEnvoiEcritureAvocat__c</fullName>
        <label>Date d&apos;envoi Ecriture Avocat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateEnvoieModeleClient__c</fullName>
        <label>Date d&apos;envoi du modèle au client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReceptionCopieEcritureAvocat__c</fullName>
        <label>Date Réception copie écriture avocat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReceptionCopie__c</fullName>
        <label>Date de réception copie</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReceptionDecision__c</fullName>
        <label>Date Réception de la décision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DelaiPassage__c</fullName>
        <label>Délai de passage présumé</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delai_de_passage_reel__c</fullName>
        <description>Si la date d&apos;audience/passage réelle est renseignée, calculer en mois le délai entre la date d&apos;envoi du modèle au client et la date d&apos;audience/passage réelle. Sinon, laisser le champ vide.</description>
        <formula>IF(ISBLANK( DateAudiencePassageReelle__c ), 
NULL, 
ROUND(( DateAudiencePassageReelle__c  -  DateEnvoieModeleClient__c )/ 365.25 * 12, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Délai de passage réel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DossierSalarie__c</fullName>
        <label>Dossier Salarié</label>
        <referenceTo>AppATdossiersSalaries__c</referenceTo>
        <relationshipLabel>Recours</relationshipLabel>
        <relationshipName>Recours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ecritures_CPAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ecritures CPAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FacturationPotentiellePonderee__c</fullName>
        <formula>FacturationPotentielle__c * TauxSucces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facturation potentielle pondérée</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FacturationPotentielle__c</fullName>
        <label>Facturation Potentielle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinDelaiAppel__c</fullName>
        <label>Fin de délai d&apos;appel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_import_externe__c</fullName>
        <externalId>true</externalId>
        <label>ID import externe</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Medecin_referent__c</fullName>
        <inlineHelpText>Indiquer ici le ou les médecins en charge du recours.</inlineHelpText>
        <label>Médecin référent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOUCLY</fullName>
                </value>
                <value>
                    <fullName>CHABANE</fullName>
                </value>
                <value>
                    <fullName>DROUOT</fullName>
                </value>
                <value>
                    <fullName>FAURE</fullName>
                </value>
                <value>
                    <fullName>FISCEL</fullName>
                </value>
                <value>
                    <fullName>LEPARC</fullName>
                </value>
                <value>
                    <fullName>LERAT</fullName>
                </value>
                <value>
                    <fullName>NEDELEC</fullName>
                </value>
                <value>
                    <fullName>PARANT-SICET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Recours</relationshipLabel>
        <relationshipName>Recours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MontantEconomieClient__c</fullName>
        <label>Montant de l&apos;économie Client</label>
        <summarizedField>AppATEconomieClient__c.MontantEconomieClient__c</summarizedField>
        <summaryForeignKey>AppATEconomieClient__c.Recours__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MontantForfaitaire__c</fullName>
        <label>Montant Forfaitaire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MotifRecours__c</fullName>
        <label>Motif Recours</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_de_contentieux__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accident de trajet imputé</fullName>
                </value>
                <value>
                    <fullName>Erreur de calcul du taux</fullName>
                </value>
                <value>
                    <fullName>Exposition avant 1993 + CRRMP</fullName>
                </value>
                <value>
                    <fullName>Exposition avant création du tableau de MP</fullName>
                </value>
                <value>
                    <fullName>Exposition multi employeurs</fullName>
                </value>
                <value>
                    <fullName>Inopposabilité</fullName>
                </value>
                <value>
                    <fullName>Matérialité</fullName>
                </value>
                <value>
                    <fullName>Médical</fullName>
                </value>
                <value>
                    <fullName>Rente après rechute</fullName>
                </value>
                <value>
                    <fullName>Respect du contradictoire</fullName>
                </value>
                <value>
                    <fullName>URSSAF</fullName>
                </value>
                <value>
                    <fullName>Recours contre tiers</fullName>
                </value>
                <value>
                    <fullName>Longueur des arrêts</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NombreEconomiesClient__c</fullName>
        <label>Nombre d&apos;économies client</label>
        <summaryForeignKey>AppATEconomieClient__c.Recours__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NotificationDecision__c</fullName>
        <label>Notification de la décision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumeroRecours__c</fullName>
        <label>Numéro de recours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganismeJuridiction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisme/Juridiction</label>
        <referenceTo>AppATorganisme__c</referenceTo>
        <relationshipLabel>Recours</relationshipLabel>
        <relationshipName>Recours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partie_Adverse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partie Adverse</label>
        <referenceTo>AppATorganisme__c</referenceTo>
        <relationshipLabel>Recours (Partie Adverse)</relationshipLabel>
        <relationshipName>Recours1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecoursAuForfait__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recours au forfait</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecoursFerme__c</fullName>
        <formula>IF(ISPICKVAL(Statut__c,&apos;Accord&apos;)||ISPICKVAL(Statut__c,&apos;Rejet&apos;),
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recours fermé ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecoursParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecoursParent</label>
        <referenceTo>AppATrecours__c</referenceTo>
        <relationshipLabel>Recours Enfants</relationshipLabel>
        <relationshipName>RecoursEnfant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecoursPrincipal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recours Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RisqueForclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risque de forclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Accord</fullName>
                </value>
                <value>
                    <fullName>Rejet</fullName>
                </value>
                <value>
                    <fullName>Désistement</fullName>
                </value>
                <value>
                    <fullName>Abandon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_1AnneeEconomieClient__c</fullName>
        <label>TECH 1ere année d&apos;économie client</label>
        <summarizedField>AppATEconomieClient__c.TECH_Annee_numero__c</summarizedField>
        <summaryForeignKey>AppATEconomieClient__c.Recours__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TECH_DeclencheurCalculEconomieClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech déclencheur calcul économie client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_DerniereAnneeEconomieClient__c</fullName>
        <label>TECH Dernière année d&apos;économie client</label>
        <summarizedField>AppATEconomieClient__c.TECH_Annee_numero__c</summarizedField>
        <summaryForeignKey>AppATEconomieClient__c.Recours__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TauxSucces__c</fullName>
        <label>Taux de succès</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TypeContentieuxPrincipal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type de contentieux principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_de_contentieux__c</fullName>
        <label>Type de contentieux</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contentieux général</fullName>
                </value>
                <value>
                    <fullName>Contentieux médical</fullName>
                </value>
                <value>
                    <fullName>Contentieux technique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>recours_gagnee__c</fullName>
        <formula>If(ISPICKVAL(Statut__c,&apos;Accord&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recours gagné?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Recours</label>
    <nameField>
        <label>Nom du recours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recours</pluralLabel>
    <recordTypes>
        <fullName>CA</fullName>
        <active>true</active>
        <label>CA</label>
    </recordTypes>
    <recordTypes>
        <fullName>CARSAT</fullName>
        <active>true</active>
        <label>CARSAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>CASS</fullName>
        <active>true</active>
        <label>CASS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CNITAAT</fullName>
        <active>true</active>
        <label>CNITAAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPAM</fullName>
        <active>true</active>
        <label>CPAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRA</fullName>
        <active>true</active>
        <label>CRA</label>
    </recordTypes>
    <recordTypes>
        <fullName>TASS</fullName>
        <active>true</active>
        <label>TASS</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCI</fullName>
        <active>true</active>
        <label>TCI</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppAT_Date_anterieur</fullName>
        <active>false</active>
        <errorConditionFormula>( NOT(ISBLANK( DateEnvoieModeleClient__c )) &amp;&amp;
 DateEnvoieModeleClient__c &gt;TODAY()) ||
( NOT(ISBLANK(  DateReceptionCopie__c )) &amp;&amp;
 DateReceptionCopie__c &gt;TODAY()) ||
( NOT(ISBLANK(  DateDepotRecours__c )) &amp;&amp;
 DateDepotRecours__c &gt;TODAY()) ||
( NOT(ISBLANK(  DateEnvoiEcritureAvocat__c )) &amp;&amp;
 DateEnvoiEcritureAvocat__c &gt;TODAY()) ||
( NOT(ISBLANK(  DateReceptionCopieEcritureAvocat__c )) &amp;&amp;
 DateReceptionCopieEcritureAvocat__c &gt;TODAY()) ||
( NOT(ISBLANK(  NotificationDecision__c )) &amp;&amp;
 NotificationDecision__c &gt;TODAY()) ||
( NOT(ISBLANK(  DateReceptionDecision__c )) &amp;&amp;
 DateReceptionDecision__c &gt;TODAY())</errorConditionFormula>
        <errorMessage>Les dates de la section information planning ne peuvent être postérieure à la date du jour à l&apos;exception de :
- la fin du délai d&apos;appel
- des dates de passage réelle et présumée
- de la date de délibéré</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Montant_forfait_obligatoire_si_forfait</fullName>
        <active>true</active>
        <errorConditionFormula>(
RecoursAuForfait__c &amp;&amp;
ISBLANK( MontantForfaitaire__c )
) ||
(
NOT(RecoursAuForfait__c)&amp;&amp;
NOT(ISBLANK(MontantForfaitaire__c))
)</errorConditionFormula>
        <errorDisplayField>MontantForfaitaire__c</errorDisplayField>
        <errorMessage>Le montant forfaitaire doit être renseigné si le recours est au forfait. (et uniquement dans ce cas)</errorMessage>
    </validationRules>
</CustomObject>